--- a/package.json
+++ b/package.json
@@ -3,15 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@gatsbyjs/reach-router": "^1.3.6",
+    "@react-icons/all-files": "^4.1.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "firebase": "^9.6.9",
+    "gulp-sass": "^5.1.0",
     "react": "^17.0.2",
+    "react-crud-icons": "^1.1.0",
     "react-dom": "^17.0.2",
-    "react-scripts": "^4.0.3",
+    "react-icons": "^4.3.1",
+    "react-scripts": "^5.0.1",
     "sass": "^1.49.9",
+    "styled-components": "^5.3.5",
+    "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -37,5 +44,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.5",
+    "postcss": "^8.4.12",
+    "prettier": "2.6.2",
+    "tailwindcss": "^3.0.24"
   }
 }
