--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "bootstrap": "^4.6.1",
     "firebase": "^9.6.9",
     "react": "^17.0.2",
     "react-crud-icons": "^1.1.0",
