--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fullcalendar/daygrid": "^5.11.0",
+    "@fullcalendar/interaction": "^5.11.0",
+    "@fullcalendar/react": "^5.11.1",
+    "@fullcalendar/timegrid": "^5.11.0",
     "@gatsbyjs/reach-router": "^1.3.6",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
@@ -13,9 +17,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "bootstrap": "^4.6.1",
+    "date-fns": "^2.28.0",
     "firebase": "^9.6.9",
     "react": "^17.0.2",
+    "react-big-calendar": "^0.40.1",
+    "react-calendar": "^3.7.0",
     "react-crud-icons": "^1.1.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-scripts": "^5.0.1",
@@ -49,6 +57,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.5",
+    "jest": "^28.1.0",
     "postcss": "^8.4.12",
     "prettier": "2.6.2",
     "tailwindcss": "^3.0.24"
